@@ -5,7 +5,7 @@
           android:versionCode="16"
           android:versionName="0.20.17">
 
-  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="17"/>
+  <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
 
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".Main"
